# delayed_task

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: .env
src/app/: main.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py  tasks.py
src/app/core/: config.py  setup.py
src/app/core/utils/: logger.py  queue.py
src/app/core/worker/: functions.py  settings.py
src/app/exceptions/: custom_exceptions.py
src/app/schemas/: jobs.py  request.py  response.py
tests/: conftest.py  test_delayed_task.py
tests/helpers/: generators.py
