[tool.poetry]
name = "sendcloud"
version = "0.1.0"
description = "The project is for the assignment"
authors = ["Prakhar Singh <prakharsingh181094@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
gunicorn = "^20.1.0"
redis = "^4.5.4"
pydantic = "^2.8.2"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
uvicorn = "^0.20.0"
arq = "^0.25.0"
pydantic-settings = "^2.0.3"
requests = "^2.32.3"
urllib3 = "^1.26.12"
anyio = "^3.7.1"
httpx = "^0.27.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
